syntax = "proto3";

package examples.blog.service.auth;

service Auth {
    rpc CreateAuth(CreateAuthRequest) returns (CreateAuthResponse) {}
}

message CreateAuthRequest {
    string user_id = 1;
    string user_pw = 2;
    string name = 3;
    string phone_number = 4;
    string email = 5;
    string introduction = 6;
}

message CreateAuthResponse {
    int64 status = 1;
    string message = 2;
}

message Message {
	string say = 1;
}